# actor-ai

./: .gitignore  MANUAL.md  README.md  Taskfile.yml  coverage.json  pyproject.toml
examples/: 01_hello_world.py  02_session.py  03_memory.py  04_tools.py  05_providers.py  06_chorus.py  07_accounting.py  08_monitoring.py  09_messages.py  10_advanced.py  11_copilot.py  12_chorus_advanced.py  13_workflow.py  14_workflow_parallel.py  15_make_agent.py  16_shared_context.py  17_copilot_sdk.py  18_copilot_sdk_memory_logs.py  WORKFLOW_DIAGRAMS.md  fake_provider.py
src/actor_ai/: __init__.py  accounting.py  actor.py  chorus.py  code_actor.py  context.py  messages.py  tools.py  workflow.py
src/actor_ai/providers/: __init__.py  anthropic.py  base.py  copilot.py  litellm.py  openai.py
tests/: conftest.py  test_accounting.py  test_actor.py  test_chorus.py  test_code_actor.py  test_context.py  test_make_agent.py  test_messages.py  test_monitoring.py  test_providers.py  test_tools.py  test_workflow.py
